# Angler_Private

./: .gitignore.txt  AllCells.h  CMakeLists.txt  Cell.cpp  Cell.h  File_1.cpp  File_Reader_Cell.cpp  File_Reader_Cell.h  IntegratingEvoFormula.md  LogsWindow.cpp  LogsWindow.h  ModelCell.cpp  ModelCell.h  PredictionCell.cpp  PredictionCell.h  PrepocessDataCell.cpp  PrepocessDataCell.h  Project_1.cpp  Project_1.sln  Project_1.vcxproj  Project_1.vcxproj.filters  README.md  Session_Manger.cpp  Session_Manger.h  Simple SVM mode  ThreadManager.h  Visualize.cpp  Visualize.h  imgui.ini  imgui_helpers.cpp  imguihelper.h  model.py  notebook_writer.py  python_binding.cpp  python_binding.h  style.h  tooltips.h
doc/: SocialNetworkAds.csv  ads network.csv  something.csv  spam.csv
temp_models/: Kmeans_20250703_204700_4e95ba.joblib  Kmeans_20250703_204700_4e95ba.meta.json  decision tree_20250705_020503_578dc5.joblib  kneighborsclassifier_20250704_002237_4ab92d.joblib  kneighborsclassifier_20250704_002237_4ab92d.meta.json  kneighborsclassifier_20250704_123629_f6dbd9.joblib  kneighborsclassifier_20250704_123629_f6dbd9.meta.json  linear regression_20250704_100407_a73899.joblib  linear regression_20250704_100407_a73899.meta.json  linear regression_20250704_110740_4c3914.joblib  linear regression_20250704_112243_6435b9.meta.json  linear regression_20250705_034907_1d050d.joblib  linear regression_20250705_040154_e176bb.joblib  linear regression_20250705_040154_e176bb.meta.json  linear regression_20250705_123305_b6b460.meta.json  linear regression_20250705_151853_a169d5.meta.json  (+4 more)
(+11 files in other folders)
